Ejercicios/Modulo12/modulo12-2048.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-2048
  namespace: ingress-demo
  labels:
    app.kubernetes.io/name: app-2048
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
        - name: app-2048
          image: cnrock/2048:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-2048
  namespace: ingress-demo
  labels:
    app.kubernetes.io/name: app-2048
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app-2048
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
