Ejercicios/Modulo12/modulo12-hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: ingress-demo
  labels:
    app: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: hashicorp/http-echo:1.0
          args:
            - "-listen=:8080"
            - "-text=Hola desde el servicio hello-world"
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: ingress-demo
  labels:
    app: hello-world
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
